registrations  CRUD  almost done, not checked Delete yet