@@ -1,5 +1,7 @@
 package com.mindera.finalproject.be.service.impl;
 
+import com.mindera.finalproject.be.TableCreation.TableCreation;
+import com.mindera.finalproject.be.converter.RegistrationConverter;
 import com.mindera.finalproject.be.dto.registration.RegistrationCreateDto;
 import com.mindera.finalproject.be.dto.registration.RegistrationPublicDto;
 import com.mindera.finalproject.be.entity.Registration;
@@ -10,56 +12,92 @@ import software.amazon.awssdk.enhanced.dynamodb.DynamoDbEnhancedClient;
 import software.amazon.awssdk.enhanced.dynamodb.DynamoDbTable;
 import software.amazon.awssdk.enhanced.dynamodb.Key;
 import software.amazon.awssdk.enhanced.dynamodb.TableSchema;
+import software.amazon.awssdk.services.dynamodb.model.AttributeValueUpdate;
 
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
+import java.util.UUID;
 import java.util.stream.Collectors;
 
 @ApplicationScoped
 public class RegistrationServiceImpl implements RegistrationService {
 
+    private final String TABLE_NAME = "Registration";
+    private final String GSIPK = "GSIPK";
     private DynamoDbTable<Registration> registrationTable;
 
     @Inject
+    TableCreation tableCreation;
+
+    @Inject
     void projectEnhancedService(DynamoDbEnhancedClient dynamoEnhancedClient) {
-        registrationTable = dynamoEnhancedClient.table("Registration", TableSchema.fromBean(Registration.class));
+        registrationTable = dynamoEnhancedClient.table(TABLE_NAME, TableSchema.fromBean(Registration.class));
     }
 
     @Override
     public List<RegistrationPublicDto> getAll() {
-        //TODO convert List<Registration> to List<RegistrationPublicDto>
-        //and replace null with the converted list
-        return null; //registrationTable.scan().items().stream().collect(Collectors.toList());
+        return RegistrationConverter.fromEntityListToPublicDtoList(registrationTable.scan().items().stream().toList());
     }
 
     @Override
     public RegistrationPublicDto getById(String id) {
-        registrationTable.getItem(Key.builder().partitionValue(id).build());
-        //TODO convert Registration to RegistrationPublicDto
-        //return the converted RegistrationPublicDto
-        return null;
+        return RegistrationConverter.fromEntityToPublicDto(registrationTable.getItem(Key.builder().partitionValue(id).sortValue(id).build()));
     }
 
     @Override
     public RegistrationPublicDto create(RegistrationCreateDto registrationCreateDto) {
-        //TODO convert registrationCreateDto to Registration
-        //and replace the null return with the converted RegistrationPublicDto
-        Registration registration = new Registration();
+        Registration registration = RegistrationConverter.fromCreateDtoToEntity(registrationCreateDto);
+        String id = "REGISTRATION#" + UUID.randomUUID();
+        registration.setPK(id);
+        registration.setSK(id);
         registrationTable.putItem(registration);
-        return null;
+        return RegistrationConverter.fromEntityToPublicDto(registration);
     }
 
     @Override
     public RegistrationPublicDto update(String id, RegistrationCreateDto registrationCreateDto) {
-        //TODO convert registrationCreateDto to Registration
-        //and replace the null return with the converted RegistrationPublicDto
-        Registration registration = new Registration();
-        registrationTable.putItem(registration);
-        return null;
+        Registration oldRegistration = registrationTable.getItem(Key.builder().partitionValue(id).sortValue(id).build());
+
+        // status
+        if(!registrationCreateDto.status().equals(oldRegistration.getStatus())){
+            oldRegistration.setStatus(registrationCreateDto.status());
+        }
+
+        //finalGrade
+        if(!registrationCreateDto.finalGrade().equals(oldRegistration.getFinalGrade())){
+            oldRegistration.setFinalGrade(registrationCreateDto.finalGrade());
+        }
+
+        //active
+        if(!registrationCreateDto.active().equals(oldRegistration.getActive())){
+            oldRegistration.setActive(registrationCreateDto.active());
+        }
+
+        //aboutYou
+        if(!registrationCreateDto.aboutYou().equals(oldRegistration.getAboutYou())){
+            oldRegistration.setAboutYou(registrationCreateDto.aboutYou());
+        }
+
+        //prevKnowledge
+        if(!registrationCreateDto.prevKnowledge().equals(oldRegistration.getPrevKnowledge())){
+            oldRegistration.setPrevKnowledge(registrationCreateDto.prevKnowledge());
+        }
+
+        //prevExperience
+        if(!registrationCreateDto.prevExperience().equals(oldRegistration.getPrevExperience())){
+            oldRegistration.setPrevExperience(registrationCreateDto.prevExperience());
+        }
+
+        registrationTable.putItem(oldRegistration);
+
+        return RegistrationConverter.fromEntityToPublicDto(oldRegistration);
     }
 
     @Override
     public void delete(String id) {
-        registrationTable.deleteItem(Key.builder().partitionValue(id).build());
+        Registration registration = registrationTable.getItem(Key.builder().partitionValue(id).build());
+        registration.setActive(false);
     }
 
 }
